--- a/register/templates/register/base.html
+++ b/register/templates/register/base.html
@@ -8,18 +8,163 @@
     <title>Project Manager</title>
     <link rel="stylesheet" href="{% static 'register/css/bootstrap.min.css' %}">
 </head>
+<style>
+    .vertical-nav {
+        min-width: 17rem;
+        width: 17rem;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+        transition: all 0.4s;
+    }
+
+    .page-content {
+        width: calc(100% - 17rem);
+        margin-left: 17rem;
+        transition: all 0.4s;
+    }
+
+    /* for toggle behavior */
+
+    #sidebar.active {
+        margin-left: -17rem;
+    }
+
+    #content.active {
+        width: 100%;
+        margin: 0;
+    }
+
+    @media (max-width: 768px) {
+        #sidebar {
+            margin-left: -17rem;
+        }
+
+        #sidebar.active {
+            margin-left: 0;
+        }
+
+        #content {
+            width: 100%;
+            margin: 0;
+        }
+
+        #content.active {
+            margin-left: 17rem;
+            width: calc(100% - 17rem);
+        }
+    }
+
+
+
+    body {
+        background: #599fd9;
+        background: -webkit-linear-gradient(to right, #599fd9, #c2e59c);
+        background: linear-gradient(to right, #599fd9, #c2e59c);
+        min-height: 100vh;
+        overflow-x: hidden;
+    }
+
+    .separator {
+        margin: 3rem 0;
+        border-bottom: 1px dashed #fff;
+    }
+
+    .text-uppercase {
+        letter-spacing: 0.1em;
+    }
+
+    .text-gray {
+        color: #aaa;
+    }
+
+    .pip {
+        margin-right: 50px;
+    }
+</style>
 
 <body>
-    <div class="container mt-5">
-        <h2 class="text-center alert alert-danger">SVGMS IP PROJECT DETAILS MANAGER</h2>
-        {% block content %} 
-            
-        {% endblock content %}
-    </div>
 
-    <script src="{% static 'register/js/jquery.js' %}"></script>
-    <script src="{% static 'register/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'register/js/popper.js' %}"></script>
-</body>
+    <body>
+        <!-- Vertical navbar -->
+        <div class="vertical-nav bg-white container-fluid col-sm-2" id="sidebar">
+            <div class="py-4 px-3 mb-4 bg-light">
+                <div class="media d-flex align-items-center"><img
+                        src="https://upload.wikimedia.org/wikipedia/commons/8/80/Swami_Vivekananda_1893_Scanned_Image.jpg"
+                        alt="..." width="65" class="mr-3 rounded-circle img-thumbnail shadow-sm">
+                    <div class="media-body">
+                        <h4 class="m-0">SVGMS</h4>
+                        <p class="font-weight-light text-muted mb-0">Swami Vivekananda School</p>
+                    </div>
+                </div>
+            </div>
+
+            <p class="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0">Main</p>
+
+            <ul class="nav flex-column bg-white mb-0">
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark font-italic bg-light">
+                        <i class="fa fa-home mr-3 text-primary fa-fw"></i>
+                        Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark font-italic">
+                        <i class="fa fa-plus-circle mr-3 text-primary fa-fw"></i>
+                        Add Project
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark font-italic">
+
+                        <i class="fa fa-comments-o text-primary fa-fw" aria-hidden="true"></i>
+                        Discussion
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark font-italic">
+                        <i class="fa fa-lightbulb-o mr-3 text-primary fa-fw"></i>
+                        Project Ideas
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link text-dark font-italic">
+                        <i class="fa fa-newspaper-o mr-1 text-primary fa-fw"></i>
+                        Latest Happenings
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="page-content p-5" id="content">
+            <!-- Toggle button -->
+            <button id="sidebarCollapse" type="button"
+                class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small
+                    class="text-uppercase font-weight-bold">Toggle</small></button>
+
+            <!-- Demo content -->
+            <h2 class="display-4 text-white">IP Project Manager</h2>
+            <p class="lead text-white mb-0">Here you can add your project details</p>
+            </p>
+
+            <div class="separator"></div>
+            <div class="row text-white">
+                <div class="col-lg-12">
+                    {% block content %}
+
+                    {% endblock content %}
+                </div>
+
+            </div>
+
+        </div>
+
+        <script src="{% static 'register/js/jquery.js' %}"></script>
+        <script src="{% static 'register/js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'register/js/popper.js' %}"></script>
+        <script src="https://use.fontawesome.com/69a8a7b9cc.js"></script>
+    </body>
 
 </html>
