Updated the front end, linked the pages

--- a/register/templates/register/index.html
+++ b/register/templates/register/index.html
@@ -106,7 +106,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic">
+                <a href="project" class="nav-link text-dark font-italic">
                     <i class="fa fa-plus-circle mr-3 text-primary fa-fw"></i>
                     Add Project
                 </a>
