--- a/register/templates/register/base.html
+++ b/register/templates/register/base.html
@@ -105,6 +105,12 @@
 
             <ul class="nav flex-column bg-white mb-0">
                 <li class="nav-item">
+                    <a href="profile/" class="nav-link text-dark font-italic bg-light">
+                        <i class="fa fa-user mr-3 text-primary fa-fw"></i>
+                        Profile
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="/" class="nav-link text-dark font-italic bg-light">
                         <i class="fa fa-home mr-3 text-primary fa-fw"></i>
                         Home
@@ -143,6 +149,7 @@
             <button id="sidebarCollapse" type="button"
                 class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small
                     class="text-uppercase font-weight-bold">Toggle</small></button>
+            <a href="{% url 'logout' %}" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4 log">Logout</a>
 
             <!-- Demo content -->
             <h2 class="display-4 text-white">IP Project Manager</h2>
@@ -160,7 +167,16 @@
             </div>
 
         </div>
+        <script>
+            document.getElementById("sidebarCollapse").onclick = function () {
+                myFunction()
+            };
 
+            function myFunction() {
+                document.getElementById('sidebar').classList.toggle('active');
+                document.getElementById('content').classList.toggle('active');
+            }
+        </script>
         <script src="{% static 'register/js/jquery.js' %}"></script>
         <script src="{% static 'register/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'register/js/popper.js' %}"></script>
