--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -5,11 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Project Manager</title>
+    <title>User Registration</title>
     <link rel="stylesheet" href="{% static 'register/css/bootstrap.min.css' %}">
-
 </head>
-
 <style>
     .vertical-nav {
         min-width: 17rem;
@@ -81,13 +79,17 @@
     .text-gray {
         color: #aaa;
     }
+    .er{
+        color: red;
+    }
+
 </style>
 
-
 <body>
-    <!-- Vertical navbar -->
+
+    <!-- navbar -->
     <div class="vertical-nav bg-white" id="sidebar">
-        <div class="py-4 px-3 mb-4 bg-light">
+        <div class="py-4 px-3 mb-3 bg-light">
             <div class="media d-flex align-items-center"><img
                     src="https://upload.wikimedia.org/wikipedia/commons/8/80/Swami_Vivekananda_1893_Scanned_Image.jpg"
                     alt="..." width="65" class="mr-3 rounded-circle img-thumbnail shadow-sm">
@@ -98,82 +100,42 @@
             </div>
         </div>
 
-        <p class="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0">Features</p>
-
-        <ul class="nav flex-column bg-white mb-0">
-            <li class="nav-item">
-                <a href="profile/" class="nav-link text-dark font-italic bg-light">
-                    <i class="fa fa-user mr-3 text-primary fa-fw"></i>
-                    Profile
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic bg-light">
-                    <i class="fa fa-home mr-3 text-primary fa-fw"></i>
-                    Home
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="project" class="nav-link text-dark font-italic">
-                    <i class="fa fa-plus-circle mr-3 text-primary fa-fw"></i>
-                    Add Project
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic">
-
-                    <i class="fa fa-comments-o text-primary fa-fw" aria-hidden="true"></i>
-                    Discussion
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic">
-                    <i class="fa fa-lightbulb-o mr-3 text-primary fa-fw"></i>
-                    Project Ideas
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic">
-                    <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>
-                    Latest Happenings
-                </a>
-            </li>
-        </ul>
-
+        <p class="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0">Authorization</p>
 
     </div>
-    <!-- End vertical navbar -->
 
-
-    <!-- Page content holder -->
     <div class="page-content p-5" id="content">
         <!-- Toggle button -->
         <button id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i
-                class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle</small></button>
-        <a href="{% url 'logout' %}" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4 log">Logout</a>
+                class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle</small></button> &nbsp;
+                <a href="{% url 'signup'%}" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4">Signup</a>
 
-        <!-- Demo content -->
-        <h2 class="display-4 text-white">IP Project Manager</h2>
 
-        </p>
+        <h2 class="display-4 text-white">Login</h2>
 
         <div class="separator"></div>
         <div class="row text-white">
-            <div class="col-lg-7">
-
-                <div class="bg-white p-5 rounded my-5 shadow-sm">
-
-                </div>
-                <div class="bg-white p-5 rounded my-3 shadow-sm">
-
-                </div>
-                <div class="col-lg-5">
-
+            <div class="col-lg-7 par">
+                <div class="p-5 rounded  shadow-sm col-sm-8"> 
+                    <form method="post" action="" novalidate> 
+                        <div class="form-group"> 
+                            {% csrf_token %}
+                            {% if form.non_field_errors %}
+                                {% for error in form.non_field_errors %}
+                                  <p class="er">{{error}}</p>
+                                {% endfor %}
+                            {% endif %}
+                            {% for fm in form %}
+                            {{fm.label_tag}} {{fm}} {{fm.errors|striptags}} <br><br>
+                            {% endfor %}
+                        </div>
+                        <input type="submit" value="Login"
+                            class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4">
+                    </form>
                 </div>
             </div>
-
         </div>
-        <!-- End demo content -->
+
         <script>
             document.getElementById("sidebarCollapse").onclick = function () {
                 myFunction()
