--- a/register/templates/register/update.html
+++ b/register/templates/register/update.html
@@ -1,7 +1,7 @@
 {% extends 'register/base.html' %}
 {% block content %}
 <div class="row">
-    <div class="col-sm-8 offset-2">
+    <div class="col-sm-6 offset-2">
     <h4 class="alert alert-info">Update Student Information</h4>
     <form action="" method="POST">
         {% csrf_token %}
@@ -9,6 +9,11 @@
         <input type="submit" class="btn btn-success" value="update">
         <a href="{% url 'add&show'%}" class="btn btn-info">Back</a>
     </form>
+  <!--  <small {% if message.tags %} class="{{ messsage.tags }}" {% endif %}>
+        <script>
+            alert('{{ message }}');
+        </script>
+    </small>-->
     </div>
 </div>
 {% endblock content %}
