--- a/register/templates/register/index.html
+++ b/register/templates/register/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-{% load static %}
+<!DOCTYPE html> {% load static %}
 <html lang="en">
 
 <head>
@@ -21,46 +20,40 @@
         box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
         transition: all 0.4s;
     }
-
+    
     .page-content {
         width: calc(100% - 17rem);
         margin-left: 17rem;
         transition: all 0.4s;
     }
-
     /* for toggle behavior */
-
+    
     #sidebar.active {
         margin-left: -17rem;
     }
-
+    
     #content.active {
         width: 100%;
         margin: 0;
     }
-
+    
     @media (max-width: 768px) {
         #sidebar {
             margin-left: -17rem;
         }
-
         #sidebar.active {
             margin-left: 0;
         }
-
         #content {
             width: 100%;
             margin: 0;
         }
-
         #content.active {
             margin-left: 17rem;
             width: calc(100% - 17rem);
         }
     }
-
-
-
+    
     body {
         background: #599fd9;
         background: -webkit-linear-gradient(to right, #599fd9, #c2e59c);
@@ -68,16 +61,16 @@
         min-height: 100vh;
         overflow-x: hidden;
     }
-
+    
     .separator {
         margin: 3rem 0;
         border-bottom: 1px dashed #fff;
     }
-
+    
     .text-uppercase {
         letter-spacing: 0.1em;
     }
-
+    
     .text-gray {
         color: #aaa;
     }
@@ -88,9 +81,7 @@
     <!-- Vertical navbar -->
     <div class="vertical-nav bg-white" id="sidebar">
         <div class="py-4 px-3 mb-4 bg-light">
-            <div class="media d-flex align-items-center"><img
-                    src="https://upload.wikimedia.org/wikipedia/commons/8/80/Swami_Vivekananda_1893_Scanned_Image.jpg"
-                    alt="..." width="65" class="mr-3 rounded-circle img-thumbnail shadow-sm">
+            <div class="media d-flex align-items-center"><img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Swami_Vivekananda_1893_Scanned_Image.jpg" alt="..." width="65" class="mr-3 rounded-circle img-thumbnail shadow-sm">
                 <div class="media-body">
                     <h4 class="m-0">SVGMS</h4>
                     <p class="font-weight-light text-muted mb-0">Swami Vivekananda School</p>
@@ -102,40 +93,34 @@
 
         <ul class="nav flex-column bg-white mb-0">
             <li class="nav-item">
-                <a href="profile/" class="nav-link text-dark font-italic bg-light">
-                    <i class="fa fa-user mr-3 text-primary fa-fw"></i>
-                    Profile
+                <a href="profile/" class="nav-link text-dark font-italic">
+                    <i class="fa fa-user mr-3 text-primary fa-fw"></i> Profile
                 </a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link text-dark font-italic bg-light">
-                    <i class="fa fa-home mr-3 text-primary fa-fw"></i>
-                    Home
+                    <i class="fa fa-home mr-3 text-primary fa-fw"></i> Home
                 </a>
             </li>
             <li class="nav-item">
                 <a href="project" class="nav-link text-dark font-italic">
-                    <i class="fa fa-plus-circle mr-3 text-primary fa-fw"></i>
-                    Add Project
+                    <i class="fa fa-plus-circle mr-3 text-primary fa-fw"></i> Add Project
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic">
+                <a href="/" class="nav-link text-dark font-italic">
 
-                    <i class="fa fa-comments-o text-primary fa-fw" aria-hidden="true"></i>
-                    Discussion
+                    <i class="fa fa-comments-o text-primary fa-fw" aria-hidden="true"></i> Discussion
                 </a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link text-dark font-italic">
-                    <i class="fa fa-lightbulb-o mr-3 text-primary fa-fw"></i>
-                    Project Ideas
+                    <i class="fa fa-lightbulb-o mr-3 text-primary fa-fw"></i> Project Ideas
                 </a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link text-dark font-italic">
-                    <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>
-                    Latest Happenings
+                    <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i> Latest Happenings
                 </a>
             </li>
         </ul>
@@ -175,7 +160,7 @@
         </div>
         <!-- End demo content -->
         <script>
-            document.getElementById("sidebarCollapse").onclick = function () {
+            document.getElementById("sidebarCollapse").onclick = function() {
                 myFunction()
             };
 
