--- a/register/templates/register/update.html
+++ b/register/templates/register/update.html
@@ -1,15 +1,13 @@
-{% extends 'register/base.html' %}
-{% block content %}
+{% extends 'register/base.html' %} {% block content %}
 <div class="row">
     <div class="col-sm-6 offset-2">
-    <h4 class="alert alert-info">Update Student Information</h4>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" class="btn btn-success" value="update">
-        <a href="{% url 'add&show'%}" class="btn btn-info">Back</a>
-    </form>
-  <!--  <small {% if message.tags %} class="{{ messsage.tags }}" {% endif %}>
+        <h4 class="alert alert-info">Update Student Information</h4>
+        <form action="" method="POST" enctype="multipart/form-data">
+            {% csrf_token %} {{form.as_p}}
+            <input type="submit" class="btn btn-success" value="update">
+            <a href="{% url 'add&show'%}" class="btn btn-info">Back</a>
+        </form>
+        <!--  <small {% if message.tags %} class="{{ messsage.tags }}" {% endif %}>
         <script>
             alert('{{ message }}');
         </script>
