--- a/register/templates/register/room.html
+++ b/register/templates/register/room.html
@@ -191,7 +191,7 @@
         <div class="page-content p-5" id="content">
             <!-- Toggle button -->
             <button id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i
-                class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle</small></button> &nbsp;
+                class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Menu</small></button> &nbsp;
             <a href="{% url 'logout' %}" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4 log">Logout</a>
 
             <h2 class="display-4 text-white">Discussion</h2>
