--- a/register/templates/register/base.html
+++ b/register/templates/register/base.html
@@ -96,7 +96,7 @@
 
             <ul class="nav flex-column bg-white mb-0">
                 <li class="nav-item">
-                    <a href="profile/" class="nav-link text-dark font-italic bg-light">
+                    <a href="profile/" class="nav-link text-dark font-italic">
                         <i class="fa fa-user mr-3 text-primary fa-fw"></i> Profile
                     </a>
                 </li>
@@ -107,7 +107,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link text-dark font-italic">
-                        <i class="fa fa-plus-circle mr-3 text-primary fa-fw"></i> Add Project
+                        <i class="fa fa-plus-circle mr-3 text-primary fa-fw  bg-light"></i> Add Project
                     </a>
                 </li>
                 <li class="nav-item">
@@ -134,6 +134,8 @@
             <button id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small
                     class="text-uppercase font-weight-bold">Menu</small></button>
             <a href="{% url 'logout' %}" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4 log">Logout</a>
+            <a href="/admin" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4 log">Admin Panel</a>
+
 
             <!-- Demo content -->
             <h2 class="display-4 text-white">IP Project Manager</h2>
