--- a/register/templates/register/discussion.html
+++ b/register/templates/register/discussion.html
@@ -95,7 +95,7 @@
 
         <ul class="nav flex-column bg-white mb-0">
             <li class="nav-item">
-                <a href="/profile" class="nav-link text-dark font-italic bg-light">
+                <a href="/profile" class="nav-link text-dark font-italic t">
                     <i class="fa fa-user mr-3 text-primary fa-fw"></i> Profile
                 </a>
             </li>
@@ -112,7 +112,7 @@
             <li class="nav-item">
                 <a href="#" class="nav-link text-dark font-italic">
 
-                    <i class="fa fa-comments-o text-primary fa-fw" aria-hidden="true"></i> Discussion
+                    <i class="fa fa-comments-o text-primary fa-fw bg-ligh" aria-hidden="true"></i> Discussion
                 </a>
             </li>
             <li class="nav-item">
