Added news api, password change system, home page, confirmation mail upon sign up

--- a/register/templates/register/add&show.html
+++ b/register/templates/register/add&show.html
@@ -20,8 +20,8 @@
                     <th scope="col">Roll No</th>
                     <th scope="col">Marks</th>
                     <th scope="col">Description</th>
-                    <th scope="col">Action</th>
                     {% if user.is_superuser %}
+                    <th scope="col">Action</th>
                     <th scope="col">Files</th>
                     {% endif %}
 
@@ -37,7 +37,8 @@
                     <td>{{ s.Marks }}</td>
                     <td>{{ s.Description }}</td>
                     <td>
-                        <a href="{% url 'updatedata' s.id %}" class="btn btn-warning btn-sm">Edit</a> {% if user.is_superuser %}
+                        {% if user.is_superuser %}
+                        <a href="{% url 'updatedata' s.id %}" class="btn btn-warning btn-sm">Edit</a> 
                         <form action="{% url 'deletedata' s.id %}" method="post" class="d-inline">
                             {% csrf_token %}
                             <input type="submit" class="btn btn-danger" value="Delete">
