--- a/register/templates/register/discussion.html
+++ b/register/templates/register/discussion.html
@@ -110,18 +110,14 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic">
+                <a href="#" class="nav-link text-dark font-italic bg-light">
 
-                    <i class="fa fa-comments-o text-primary fa-fw bg-ligh" aria-hidden="true"></i> Discussion
+                    <i class="fa fa-comments-o text-primary fa-fw " aria-hidden="true"></i> Discussion
                 </a>
             </li>
+
             <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic">
-                    <i class="fa fa-lightbulb-o mr-3 text-primary fa-fw"></i> Project Ideas
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic">
+                <a href="/news" class="nav-link text-dark font-italic">
                     <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i> Latest Happenings
                 </a>
             </li>
