--- a/register/templates/register/signup.html
+++ b/register/templates/register/signup.html
@@ -95,7 +95,8 @@
         <!-- Toggle button -->
         <button id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i
                 class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Menu</small></button> &nbsp;
-        <a href="{% url 'login'%}" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4">Login</a> {% if messages %} {% for message in messages %}
+        <a href="{% url 'login'%}" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4">Login</a>
+         {% if messages %} {% for message in messages %}
         <small {% if message.tags %} class="{{ messsage.tags }}" {% endif %}>
                     <script>
                         alert('{{ message }}');
