--- a/register/templates/register/base.html
+++ b/register/templates/register/base.html
@@ -101,13 +101,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/home" class="nav-link text-dark font-italic bg-light">
+                    <a href="/home" class="nav-link text-dark font-italic">
                         <i class="fa fa-home mr-3 text-primary fa-fw"></i> Home
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link text-dark font-italic">
-                        <i class="fa fa-plus-circle mr-3 text-primary fa-fw  bg-light"></i> Add Project
+                    <a href="#" class="nav-link text-dark font-italic bg-light">
+                        <i class="fa fa-plus-circle mr-3 text-primary fa-fw  "></i> Add Project
                     </a>
                 </li>
                 <li class="nav-item">
@@ -116,13 +116,9 @@
                         <i class="fa fa-comments-o text-primary fa-fw" aria-hidden="true"></i> Discussion
                     </a>
                 </li>
+
                 <li class="nav-item">
-                    <a href="#" class="nav-link text-dark font-italic">
-                        <i class="fa fa-lightbulb-o mr-3 text-primary fa-fw"></i> Project Ideas
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link text-dark font-italic">
+                    <a href="/news" class="nav-link text-dark font-italic">
                         <i class="fa fa-newspaper-o mr-1 text-primary fa-fw"></i> Latest Happenings
                     </a>
                 </li>
