--- a/register/templates/register/news.html
+++ b/register/templates/register/news.html
@@ -1,166 +1,20 @@
-<!DOCTYPE html> {% load static %}
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>User Registration</title>
-    <link rel="stylesheet" href="{% static 'register/css/bootstrap.min.css' %}">
-</head>
-<style>
-    .vertical-nav {
-        min-width: 17rem;
-        width: 17rem;
-        height: 100vh;
-        position: fixed;
-        top: 0;
-        left: 0;
-        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
-        transition: all 0.4s;
-    }
-    
-    .page-content {
-        width: calc(100% - 17rem);
-        margin-left: 17rem;
-        transition: all 0.4s;
-    }
-    /* for toggle behavior */
-    
-    #sidebar.active {
-        margin-left: -17rem;
-    }
-    
-    #content.active {
-        width: 100%;
-        margin: 0;
-    }
-    
-    @media (max-width: 768px) {
-        #sidebar {
-            margin-left: -17rem;
-        }
-        #sidebar.active {
-            margin-left: 0;
-        }
-        #content {
-            width: 100%;
-            margin: 0;
-        }
-        #content.active {
-            margin-left: 17rem;
-            width: calc(100% - 17rem);
-        }
-    }
-    
-    body {
-        background: #599fd9;
-        background: -webkit-linear-gradient(to right, #599fd9, #c2e59c);
-        background: linear-gradient(to right, #599fd9, #c2e59c);
-        min-height: 100vh;
-        overflow-x: hidden;
-    }
-    
-    .separator {
-        margin: 3rem 0;
-        border-bottom: 1px dashed #fff;
-    }
-    
-    .text-uppercase {
-        letter-spacing: 0.1em;
-    }
-    
-    .text-gray {
-        color: #aaa;
-    }
-    
-    .log {
-        margin-right: 0px;
-    }
-</style>
-
-<body>
-
-    <!-- navbar -->
-    <div class="vertical-nav bg-white" id="sidebar">
-        <div class="py-4 px-3 mb-3 bg-light">
-            <div class="media d-flex align-items-center"><img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Swami_Vivekananda_1893_Scanned_Image.jpg" alt="..." width="65" class="mr-3 rounded-circle img-thumbnail shadow-sm">
-                <div class="media-body">
-                    <h4 class="m-0">SVGMS</h4>
-                    <p class="font-weight-light text-muted mb-0">Swami Vivekananda School</p>
+{% extends 'register/news1.html' %}
+{% block body %}
+<div class="container">
+    <div class="row">
+            {% for x in api.articles %}
+            <div class="col-sm-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="{{x.urlToImage}}" alt="{{x.source.name}}" height="200" width="200">
+                        <div class="card-body">
+                            <h5 class="card-title" height="60px">{{x.title}}</h5>
+                            <p class="card-text">{{x.description|truncatechars:150}}</p>
+                            <a href="{{x.url}}" target="_blank" class="btn btn-primary">Read more</a>
+                        </div>
                 </div>
             </div>
-        </div>
-
-        <p class="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0">Features</p>
-
-        <ul class="nav flex-column bg-white mb-0">
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic ">
-                    <i class="fa fa-user mr-3 text-primary fa-fw"></i> Profile
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="/home" class="nav-link text-dark font-italic">
-                    <i class="fa fa-home mr-3 text-primary fa-fw"></i> Home
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="{% url 'add&show' %}" class="nav-link text-dark font-italic">
-                    <i class="fa fa-plus-circle mr-3 text-primary fa-fw"></i> Add Project
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="/" class="nav-link text-dark font-italic">
-
-                    <i class="fa fa-comments-o text-primary fa-fw" aria-hidden="true"></i> Discussion
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic">
-                    <i class="fa fa-lightbulb-o mr-3 text-primary fa-fw"></i> Project Ideas
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic">
-                    <i class="fa fa-picture-o mr-3 text-primary fa-fw bg-light"></i> Latest Happenings
-                </a>
-            </li>
-        </ul>
-
+            <br>
+            {% endfor %}
     </div>
-
-    <div class="page-content p-5" id="content">
-        <!-- Toggle button -->
-        <button id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i
-                class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Menu</small></button> &nbsp;
-        <a href="{% url 'logout' %}" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4 log">Logout</a>
-
-        <h2 class="display-4 text-white">Profile</h2>
-
-        <div class="separator"></div>
-        <div class="row text-white">
-            <div class="col-lg-7 par">
-                <div class="p-5 rounded  shadow-sm col-sm-8">
-
-                </div>
-            </div>
-        </div>
-
-        <script>
-            document.getElementById("sidebarCollapse").onclick = function() {
-                myFunction()
-            };
-
-            function myFunction() {
-                document.getElementById('sidebar').classList.toggle('active');
-                document.getElementById('content').classList.toggle('active');
-            }
-        </script>
-
-        <script src="{% static 'register/js/jquery.js' %}"></script>
-        <script src="{% static 'register/js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'register/js/popper.js' %}"></script>
-        <script src="https://use.fontawesome.com/69a8a7b9cc.js"></script>
-</body>
-
-</html>
+</div>
+{% endblock %}
