--- a/register/templates/register/profile.html
+++ b/register/templates/register/profile.html
@@ -76,6 +76,7 @@
     .log {
         margin-right: 0px;
     }
+
 </style>
 
 <body>
@@ -115,13 +116,9 @@
                     <i class="fa fa-comments-o text-primary fa-fw" aria-hidden="true"></i> Discussion
                 </a>
             </li>
+
             <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic">
-                    <i class="fa fa-lightbulb-o mr-3 text-primary fa-fw"></i> Project Ideas
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link text-dark font-italic">
+                <a href="/news" class="nav-link text-dark font-italic">
                     <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i> Latest Happenings
                 </a>
             </li>
@@ -131,9 +128,12 @@
 
     <div class="page-content p-5" id="content">
         <!-- Toggle button -->
-        <button id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i
+        <button id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4 gap"><i
                 class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Menu</small></button> &nbsp;
+        
         <a href="{% url 'logout' %}" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4 log">Logout</a>
+        <a href="{% url 'changepass' %}" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4 log">Change Password</a>
+
 
         <h2 class="display-4 text-white">Profile</h2>
 
