corrected spelling of around

--- a/register/templates/register/news1.html
+++ b/register/templates/register/news1.html
@@ -134,7 +134,7 @@ min-height: 60px;}
                 class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Menu</small></button> &nbsp;
         <a href="{% url 'logout' %}" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4 log">Logout</a>
 
-        <h2 class="display-4 text-white">Latest Happenings Aroud You</h2>
+        <h2 class="display-4 text-white">Latest Happenings Around You</h2>
 
         <div class="separator"></div>
         <div class="row text-white">
